rental-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rental-service
  namespace: bicycle-network
spec:
  selector:
    app: rental-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: ClusterIP
